--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -99,6 +99,8 @@
 \newcommand{\state}[1]{\operatorname*{st}(#1)}
 \newcommand{\onecomb}[1]{\operatorname*{1-comb}(#1)}
 \newcommand{\ncomb}[1]{\operatorname*{n-comb}(#1)}
+\newcommand{\ncombb}[1]{\operatorname*{n-comb!}(#1)}
+\newcommand{\ncomba}[1]{\operatorname*{n-comb}^*(#1)}
 \let\prot\relax
 \newcommand{\prot}[2]{\operatorname{prot}_{#1}(#2)}
 
@@ -127,6 +129,7 @@
 \def\>{\rangle}
 \newcommand{\xcong}[1]{\overset{#1}{\cong}}
 \newcommand{\xequiv}[1]{\overset{#1}{\equiv}}
+\newcommand{\xequals}[1]{\overset{#1}{=}}
 \def\cind{\xequiv{\text{c}}}
 
 \def\into{\hookrightarrow}
