--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1761,3 +1761,83 @@
 	url = {https://www.sciencedirect.com/science/article/pii/0021869371901001},
 	author = {John Brendan Sullivan},
 }
+
+@article{girard-1987,
+	title = {Linear logic},
+	journal = {Theoretical Computer Science},
+	volume = {50},
+	number = {1},
+	pages = {1-101},
+	year = {1987},
+	issn = {0304-3975},
+	doi = {https://doi.org/10.1016/0304-3975(87)90045-4},
+	url = {https://www.sciencedirect.com/science/article/pii/0304397587900454},
+	author = {Jean-Yves Girard},
+	abstract = {The familiar connective of negation is broken into two operations:
+	            linear negation which is the purely negative part of negation and
+	            the modality “of course” which has the meaning of a reaffirmation.
+	            Following this basic discovery, a completely new approach to the
+	            whole area between constructive logics and programmation is
+	            initiated.},
+}
+
+@article{mellies-2009,
+	title = {Categorical semantics of linear logic},
+	author = {Mellies, Paul-Andr{\'e}},
+	journal = {Panoramas et syntheses},
+	volume = {27},
+	pages = {15--215},
+	year = {2009},
+}
+
+@inproceedings{benton-1995,
+	author = "Benton, P. N.",
+	editor = "Pacholski, Leszek and Tiuryn, Jerzy",
+	title = "A mixed linear and non-linear logic: Proofs, terms and models",
+	booktitle = "Computer Science Logic",
+	year = "1995",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "121--135",
+	abstract = "Intuitionistic linear logic regains the expressive power of
+	            intuitionistic logic through the ! (`of course') modality. Benton,
+	            Bierman, Hyland and de Paiva have given a term assignment system
+	            for ILL and an associated notion of categorical model in which the
+	            ! modality is modelled by a comonad satisfying certain extra
+	            conditions. Ordinary intuitionistic logic is then modelled in a
+	            cartesian closed category which arises as a full subcategory of the
+	            category of coalgebras for the comonad.",
+	isbn = "978-3-540-49404-1",
+}
+
+@inproceedings{valiron-zdancewic-2014,
+	author = "Valiron, Beno{\^i}t and Zdancewic, Steve",
+	editor = "Ciobanu, Gabriel and M{\'e}ry, Dominique",
+	title = "Finite Vector Spaces as Model of Simply-Typed Lambda-Calculi",
+	booktitle = "Theoretical Aspects of Computing -- ICTAC 2014",
+	year = "2014",
+	publisher = "Springer International Publishing",
+	address = "Cham",
+	pages = "442--459",
+	abstract = "In this paper we use finite vector spaces (finite dimension, over
+	            finite fields) as a non-standard computational model of linear
+	            logic. We first define a simple, finite PCF-like lambda-calculus
+	            with booleans, and then we discuss two finite models, one based on
+	            finite sets and the other on finite vector spaces. The first model
+	            is shown to be fully complete with respect to the operational
+	            semantics of the language. The second model is not complete, but we
+	            develop an algebraic extension of the finite lambda calculus that
+	            recovers completeness. The relationship between the two semantics
+	            is described, and several examples based on Church numerals are
+	            presented.",
+	isbn = "978-3-319-10882-7",
+}
+
+@misc{roman-2020,
+	title = {Comb Diagrams for Discrete-Time Feedback},
+	author = {Mario Román},
+	year = {2020},
+	eprint = {2003.06214},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.LO},
+}
